--- a/index.html
+++ b/index.html
@@ -9,17 +9,35 @@
         <title>Football Dart Game</title>
 		<meta name="description" content="This program keeps track of scores on that football dart game.">
 
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link href="./app.css" rel="stylesheet" />
+
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="https://use.fontawesome.com/4aadd38979.js"></script>
 
     </head>
 
     <body>
 
-        <h1>Football Dart Game</h1>
+        <div id="mainWrapper">
 
-        <button id="newGame">New Game</button>
+            <h1 id="heading" class="h3">Football Dart Game</h1>
+            <hr>
+            <section id="numPlayers" class="hide">
+                <h2 class="h4">How many players?
+                    <small class="text-muted">1-6 Players</small>
+                </h2>
+                <input type="number" class="form-control" min="1" max="6" placeholder="Enter number of players" />
+                <button class="btn btn-success"><i class="fa fa-check" aria-hidden="true"></i></button>
+            </section>
 
-        <script src="./app.js"></script>
+            <button id="newGame" class="btn btn-primary">New Game</button>
+
+            <script src="./app.js"></script>
+
+        </div>
         
     </body>
 
