--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="description" content="This program keeps track of scores on that football dart game.">
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="./app.css" />
+        <link rel="stylesheet" href="./css/app.css" />
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -24,12 +24,13 @@
 
         <div id="mainWrapper">
 
+            <h1 id="heading" class="h3">Football Dart Game</h1><hr>
             
         </div>
 
-        <script src="./game.js"></script>
-        <script src="./player.js"></script>
-        <script src="./app.js"></script>
+        <script src="./js/game.js"></script>
+        <script src="./js/player.js"></script>
+        <script src="./js/app.js"></script>
 
     </body>
     
