--- a/index.html
+++ b/index.html
@@ -41,11 +41,8 @@
             <!-- Player Detaials Section -->
             <section id="playerDetails" class="hide">
                 <h2 class="h4">Player Details</h2>
-                <div class="row">
-                    <div id="player1Box" class="col-md-3 hide">
-                        <label>Player 1 Name</label>
-                        <div><input type="text" id="player1" class="form-control" placeholder="Enter Player 1 Name" /></div>
-                    </div>
+                <div id="playersRow" class="row">
+                    
                 </div>
                 <button id="startGame" class="btn btn-success">Go!</button>
             </section>
