Working on main box score table.  Comitting Progress

--- a/index.html
+++ b/index.html
@@ -47,6 +47,36 @@
                 <button id="startGame" class="btn btn-success">Go!</button>
             </section>
             <!-- /END -->
+
+            <!-- Box Score Section -->
+            <section id="boxScore" class="hide">
+                <h2 class="h4">Box Score</h2>
+                <table id="scoreBoard" class="table table-dark">
+                    <thead>
+                        <tr>
+                            <th>Player:</th>
+                            <th>1st Quarter</th>
+                            <th>2nd Quarter</th>
+                            <th>3rd Quarter</th>
+                            <th>4th Quarter</th>
+                            <th>Current Score</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </section>
+            <!-- /END -->
+
+            <!-- Main Game Section -->
+            <section id="mainGame" class="hide">
+                <h2 class="h4">Main Game</h2>
+                <div id="gameRow" class="row">
+                    
+                </div>
+                <!-- <button id="startGame" class="btn btn-success">Go!</button> -->
+            </section>
+            <!-- /END -->
             
         </div>
 
