trying to figure out how to increment turn and quarters committing cuz i suck

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <section id="mainGame" class="hide">
                 <h2 class="h4">Main Game</h2>
                 <div id="gameRow" class="row">
-                    
+                    <button id="turnButton">Go</button>
                 </div>
                 <!-- <button id="startGame" class="btn btn-success">Go!</button> -->
             </section>
